tests/NormalTests/paczka1/small_fuzzy/66250210.err
Error in line 2: 9t59O0Aw5KT A463 15,6
Error in line 8: S196 S49 40,7
Error in line 6: lrj S196 4,8
Error in line 4: oEeTF A463 35,0
Error in line 9: S196 S196 65,7
Error in line 14: S196 S49 88,4
